appId: com.mirahi.floatingPlayer

---

- tapOn: "OPEN PLAYER"
- assertVisible: "Player"
- back
